api625: TCK Challenge: TCK should not require JPMS module-info.class
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>